src/styles/global.css
@import "tailwindcss";

@plugin "@tailwindcss/typography" {
	/* biome-ignore lint/correctness/noUnknownProperty:
	No clue why it does not recognize it is part of Tailwind */
	className: format;
}

@plugin 'tailwind-scrollbar' {
	/* biome-ignore lint/correctness/noUnknownProperty:
	No clue why it does not recognize it is part of Tailwind */
	nocompatible: true;
}

@theme {
	--breakpoint-xs: 475px;
	/* Unsure where this came from */

	--font-sans: "Josefin Sans Variable", "ui-sans-serif", "system-ui",
		"sans-serif", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
		"Noto Color Emoji";
	--font-mono: "ui-monospace", "SFMono-Regular", "Menlo", "Monaco", "Consolas",
		"Liberation Mono", "Courier New", "monospace";
}

@custom-variant aria-current (&[aria-current="true"]);
@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@layer base {
	:root {
		@apply selection:bg-violet-100 selection:text-violet-950 dark:selection:bg-violet-400/10 dark:selection:text-violet-100;
	}

	/* Twemoji */
	img.emoji {
		display: inline !important;
		border: none !important;
		box-shadow: none !important;
		height: 1em !important;
		width: 1em !important;
		margin: 0 0.07em !important;
		vertical-align: -0.1em !important;
		background: none !important;
		padding: 0 !important;
		pointer-events: none;
	}

	footer img.emoji {
		vertical-align: -0.275em !important;
	}

	/* SkipLink from accessible-astro-components */
	body .skip-link a {
		@apply rounded bg-violet-200 text-violet-900 ring-violet-900 transition-none outline-none focus-visible:ring-2 dark:bg-gray-800 dark:text-gray-100 dark:ring-gray-50;
	}

	body .skip-link a:focus-visible {
		@apply top-1 left-1;
		outline-offset: 2px;
	}

	body main#main-content {
		@apply outline-none;
	}

	/* Leaflet Map */
	.leaflet-pane {
		z-index: 10 !important;
	}

	.leaflet-top,
	.leaflet-bottom {
		z-index: 30 !important;
	}

	.leaflet-control {
		z-index: 20 !important;
	}

	.leaflet-container {
		z-index: 30 !important;
	}
}

@layer components {
	/* Article Formatting */
	.format {
		@apply format-code:font-normal format-table:tabular-nums;
	}

	.format figure > div.side-by-side-images {
		@apply mx-auto flex justify-center gap-x-4;
	}

	.format figure > div.side-by-side-images > * {
		@apply w-1/2;
	}

	.format figure > div.side-by-side-images picture img {
		@apply my-0;
	}

	/* Custom for the finances article */
	.format .money-table table tbody {
		@apply font-mono;
	}
}

@layer utilities {
	.format a:not(.not-format) {
		@apply rounded underline ring-violet-600 outline-none focus-visible:ring-2 dark:ring-gray-50 hover:text-violet-800 dark:hover:text-violet-300;
	}

	/* Rehype Autolink - Custom styles for heading anchor links. */
	.format .heading-wrapper {
		--icon-size: 1em;
		--icon-spacing: 0.25em;
	}

	.format .heading-wrapper > :first-child {
		margin-inline-end: calc(var(--icon-size) + var(--icon-spacing));
		display: inline-block;
	}

	.format .heading-wrapper a {
		@apply m-0;
		margin-inline-start: calc(-1 * (var(--icon-size)));
		display: inline;

		/*
			@apply absolute left-0 -translate-x-full text-violet-300 no-underline opacity-0 dark:text-violet-400;
			transition-property:
				filter, opacity, color, background-color, border-color,
				text-decoration-color, fill, stroke;
			transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
			transition-duration: 150ms;
			*/
	}

	.format .heading-wrapper a svg {
		@apply inline relative origin-center -rotate-45;
		/* display: inline;
		position: relative;
		transform-origin: center;
		transform: rotate(-45deg); */
		bottom: .125em;
		width: var(--icon-size);
	}

	.format
		:where(.heading-wrapper.level-h2 + .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		)
		h3,
	.format
		:where(.heading-wrapper.level-h3 + .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		)
		h4 {
		@apply mt-0;
	}

	.format p:has(+ .heading-wrapper) {
		@apply mb-0;
	}

	.format .heading-wrapper + p,
	.format .heading-wrapper + figure {
		@apply mt-0;
	}

	.format .heading-wrapper.level-h2 a {
		font-size: 1.5em;
	}

	.format .heading-wrapper.level-h3 a {
		font-size: 1.25em;
	}

	.format .heading-wrapper.level-h4 a,
	.format .heading-wrapper.level-h5 a,
	.format .heading-wrapper.level-h6 a {
		font-size: 1em;
	}

	/* Prevent double or triple clicks from potentially selecting the anchor link a11y text. */
	.format .heading-wrapper a .sr-only {
		-webkit-user-select: none;
		user-select: none;
	}

	@media (hover: hover) {
		.format .heading-wrapper a {
			@apply opacity-0;
		}
	}

	.format .heading-wrapper:hover a,
	.format .heading-wrapper a:focus {
		@apply text-violet-500 dark:text-violet-300 no-underline opacity-100;
	}

	.format .heading-wrapper:hover a:hover {
		@apply text-violet-700 dark:text-violet-50 saturate-[0.75];
	}
}

